                left unchanged.
            - All versions of valueOf() now leave dest unchanged if there was
              an error (as opposed to leaving dest undefined, as was the case
              for integer versions, or setting dest to a fixed false/empty
              value, as was the case for bool and BoolSet versions).
        Type alias Int128, UInt128:
            - Provides access to native 128-bit integers, if the platform
              supports them.  This is preferred to the old (and clumsier) way
              of accessing 128-bit types via the type aliases in IntOfSize<16>.
        Type alias make_signed_cpp_t<T>, make_unsigned_cpp_t<T>:
            - New alternatives to std::make_signed_t<T> and
              std::make_unsigned_t<T> that allow for 128-bit integers also.
        Constant is_cpp_integer_v<T>, is_signed_cpp_integer_v<T>,
                is_unsigned_cpp_integer_v<T>:
            - New compile-time constant is_signed_cpp_integer_v<T>.
            - All three constants are now false when T == bool (previously,
              is_cpp_integer_v<bool> and is_unsigned_cpp_integer_v<bool> were
              both true).
        Concepts:
            - Many new concepts:
              + AssignableTo, CanConstruct, CoefficientDomain,
                ConcatenableSequence, Domain, Field, IntegralDomain,
                ReginaBitmask, Ring, RingLike, StrictWeakOrder,
                TerminatingCallback, VoidCallback (defined in concepts/core.h)
              + AnyInteger, ArbitraryPrecisionInteger, CppInteger,
                IntegerComparable, IntegerCompatible, ReginaInteger,
                StandardCppInteger, SignedCppInteger, UnsignedCppInteger
                (defined in utilities/intutils.h)
              + InherentlyTightEncodable, Readable, StandardStringifiable,
                Stringifiable, Writable (defined in concepts/io.h)
              + BidirectionalIteratorFor, CharIterator, ForwardIteratorFor,